--- a/styles/style.css
+++ b/styles/style.css
@@ -610,6 +610,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.area-calculation-p {
+  margin-bottom: 0.5rem;
+  text-align: left;
+}
+
 .col-\[-1\] {
   grid-column: -1;
 }
@@ -664,6 +669,14 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-end {
   justify-content: flex-end;
 }
@@ -678,6 +691,10 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .font-inter {
